xpl/xpl_parser.output
   0  $accept : file $end

   1  file : decls
   2       |

   3  decls : decl
   4        | decls decl

   5  decl : vardecl ';'
   6       | funcdecl
   7       | funcdef

   8  vardecls : vardecl ';'
   9           | vardecls vardecl ';'

  10  vardecl : tPUBLIC type tIDENTIFIER
  11          | tUSED type tIDENTIFIER
  12          | type tIDENTIFIER
  13          | tPUBLIC type tIDENTIFIER '=' expr
  14          | tUSED type tIDENTIFIER '=' expr
  15          | type tIDENTIFIER '=' expr

  16  funcdecl : tPUBLIC type tIDENTIFIER '(' fargs ')'
  17           | tUSED type tIDENTIFIER '(' fargs ')'
  18           | type tIDENTIFIER '(' fargs ')'
  19           | tPUBLIC tPROCEDURE tIDENTIFIER '(' fargs ')'
  20           | tUSED tPROCEDURE tIDENTIFIER '(' fargs ')'
  21           | tPROCEDURE tIDENTIFIER '(' fargs ')'

  22  funcdef : tPUBLIC type tIDENTIFIER '(' fargs ')' block
  23          | type tIDENTIFIER '(' fargs ')' block
  24          | tPUBLIC type tIDENTIFIER '(' fargs ')' '=' literal block
  25          | type tIDENTIFIER '(' fargs ')' '=' literal block
  26          | tPUBLIC tPROCEDURE tIDENTIFIER '(' fargs ')' block
  27          | tPROCEDURE tIDENTIFIER '(' fargs ')' block

  28  literal : tINTEGER
  29          | tDOUBLE
  30          | string
  31          | tNULL

  32  string : tSTRING
  33         | string tSTRING

  34  fargs : args
  35        |

  36  args : arg
  37       | args ',' arg

  38  arg : type tIDENTIFIER

  39  type : tINT
  40       | tREAL
  41       | tSTR
  42       | '[' type ']'

  43  block : '{' vardecls instrs '}'
  44        | '{' vardecls '}'
  45        | '{' instrs '}'
  46        | '{' '}'

  47  instrs : instr
  48         | instrs instr

  49  instr : expr ';'
  50        | expr tPRINT
  51        | expr tPRINTLN
  52        | tSTOP
  53        | tNEXT
  54        | tRETURN
  55        | cond
  56        | iter
  57        | block

  58  cond : tIF '(' expr ')' instr
  59       | tIF '(' expr ')' instr else

  60  else : tELSIF '(' expr ')' instr else
  61       | tELSE instr
  62       | tELSIF '(' expr ')' instr

  63  iter : tWHILE '(' expr ')' instr
  64       | tSWEEP '+' '(' lval ':' expr ':' expr ')' instr
  65       | tSWEEP '+' '(' lval ':' expr ':' expr ':' expr ')' instr
  66       | tSWEEP '-' '(' lval ':' expr ':' expr ')' instr
  67       | tSWEEP '-' '(' lval ':' expr ':' expr ':' expr ')' instr

  68  exprs : expr
  69        | exprs ',' expr

  70  expr : '-' expr
  71       | '+' expr
  72       | expr '+' expr
  73       | expr '-' expr
  74       | expr '*' expr
  75       | expr '/' expr
  76       | expr '%' expr
  77       | expr '<' expr
  78       | expr '>' expr
  79       | expr tGE expr
  80       | expr tLE expr
  81       | expr tNE expr
  82       | expr tEQ expr
  83       | '(' expr ')'
  84       | lval
  85       | lval '=' expr
  86       | expr '&' expr
  87       | expr '|' expr
  88       | '@'
  89       | funcall
  90       | '[' expr ']'
  91       | lval '?'
  92       | literal

  93  lval : tIDENTIFIER
  94       | expr '[' expr ']'

  95  funcall : tIDENTIFIER '(' exprs ')'
  96          | tIDENTIFIER '(' ')'

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tINT  shift 1
	tREAL  shift 2
	tPROCEDURE  shift 3
	tPUBLIC  shift 4
	tUSED  shift 5
	tSTR  shift 6
	'['  shift 7
	$end  reduce 2

	file  goto 8
	decl  goto 9
	vardecl  goto 10
	decls  goto 11
	funcdecl  goto 12
	funcdef  goto 13
	type  goto 14


state 1
	type : tINT .  (39)

	.  reduce 39


state 2
	type : tREAL .  (40)

	.  reduce 40


state 3
	funcdecl : tPROCEDURE . tIDENTIFIER '(' fargs ')'  (21)
	funcdef : tPROCEDURE . tIDENTIFIER '(' fargs ')' block  (27)

	tIDENTIFIER  shift 15
	.  error


state 4
	vardecl : tPUBLIC . type tIDENTIFIER  (10)
	vardecl : tPUBLIC . type tIDENTIFIER '=' expr  (13)
	funcdecl : tPUBLIC . type tIDENTIFIER '(' fargs ')'  (16)
	funcdecl : tPUBLIC . tPROCEDURE tIDENTIFIER '(' fargs ')'  (19)
	funcdef : tPUBLIC . type tIDENTIFIER '(' fargs ')' block  (22)
	funcdef : tPUBLIC . type tIDENTIFIER '(' fargs ')' '=' literal block  (24)
	funcdef : tPUBLIC . tPROCEDURE tIDENTIFIER '(' fargs ')' block  (26)

	tINT  shift 1
	tREAL  shift 2
	tPROCEDURE  shift 16
	tSTR  shift 6
	'['  shift 7
	.  error

	type  goto 17


state 5
	vardecl : tUSED . type tIDENTIFIER  (11)
	vardecl : tUSED . type tIDENTIFIER '=' expr  (14)
	funcdecl : tUSED . type tIDENTIFIER '(' fargs ')'  (17)
	funcdecl : tUSED . tPROCEDURE tIDENTIFIER '(' fargs ')'  (20)

	tINT  shift 1
	tREAL  shift 2
	tPROCEDURE  shift 18
	tSTR  shift 6
	'['  shift 7
	.  error

	type  goto 19


state 6
	type : tSTR .  (41)

	.  reduce 41


state 7
	type : '[' . type ']'  (42)

	tINT  shift 1
	tREAL  shift 2
	tSTR  shift 6
	'['  shift 7
	.  error

	type  goto 20


state 8
	$accept : file . $end  (0)

	$end  accept


state 9
	decls : decl .  (3)

	.  reduce 3


state 10
	decl : vardecl . ';'  (5)

	';'  shift 21
	.  error


state 11
	file : decls .  (1)
	decls : decls . decl  (4)

	tINT  shift 1
	tREAL  shift 2
	tPROCEDURE  shift 3
	tPUBLIC  shift 4
	tUSED  shift 5
	tSTR  shift 6
	'['  shift 7
	$end  reduce 1

	decl  goto 22
	vardecl  goto 10
	funcdecl  goto 12
	funcdef  goto 13
	type  goto 14


state 12
	decl : funcdecl .  (6)

	.  reduce 6


state 13
	decl : funcdef .  (7)

	.  reduce 7


state 14
	vardecl : type . tIDENTIFIER  (12)
	vardecl : type . tIDENTIFIER '=' expr  (15)
	funcdecl : type . tIDENTIFIER '(' fargs ')'  (18)
	funcdef : type . tIDENTIFIER '(' fargs ')' block  (23)
	funcdef : type . tIDENTIFIER '(' fargs ')' '=' literal block  (25)

	tIDENTIFIER  shift 23
	.  error


state 15
	funcdecl : tPROCEDURE tIDENTIFIER . '(' fargs ')'  (21)
	funcdef : tPROCEDURE tIDENTIFIER . '(' fargs ')' block  (27)

	'('  shift 24
	.  error


state 16
	funcdecl : tPUBLIC tPROCEDURE . tIDENTIFIER '(' fargs ')'  (19)
	funcdef : tPUBLIC tPROCEDURE . tIDENTIFIER '(' fargs ')' block  (26)

	tIDENTIFIER  shift 25
	.  error


state 17
	vardecl : tPUBLIC type . tIDENTIFIER  (10)
	vardecl : tPUBLIC type . tIDENTIFIER '=' expr  (13)
	funcdecl : tPUBLIC type . tIDENTIFIER '(' fargs ')'  (16)
	funcdef : tPUBLIC type . tIDENTIFIER '(' fargs ')' block  (22)
	funcdef : tPUBLIC type . tIDENTIFIER '(' fargs ')' '=' literal block  (24)

	tIDENTIFIER  shift 26
	.  error


state 18
	funcdecl : tUSED tPROCEDURE . tIDENTIFIER '(' fargs ')'  (20)

	tIDENTIFIER  shift 27
	.  error


state 19
	vardecl : tUSED type . tIDENTIFIER  (11)
	vardecl : tUSED type . tIDENTIFIER '=' expr  (14)
	funcdecl : tUSED type . tIDENTIFIER '(' fargs ')'  (17)

	tIDENTIFIER  shift 28
	.  error


state 20
	type : '[' type . ']'  (42)

	']'  shift 29
	.  error


state 21
	decl : vardecl ';' .  (5)

	.  reduce 5


state 22
	decls : decls decl .  (4)

	.  reduce 4


state 23
	vardecl : type tIDENTIFIER .  (12)
	vardecl : type tIDENTIFIER . '=' expr  (15)
	funcdecl : type tIDENTIFIER . '(' fargs ')'  (18)
	funcdef : type tIDENTIFIER . '(' fargs ')' block  (23)
	funcdef : type tIDENTIFIER . '(' fargs ')' '=' literal block  (25)

	'='  shift 30
	'('  shift 31
	';'  reduce 12


state 24
	funcdecl : tPROCEDURE tIDENTIFIER '(' . fargs ')'  (21)
	funcdef : tPROCEDURE tIDENTIFIER '(' . fargs ')' block  (27)
	fargs : .  (35)

	tINT  shift 1
	tREAL  shift 2
	tSTR  shift 6
	'['  shift 7
	')'  reduce 35

	arg  goto 32
	fargs  goto 33
	args  goto 34
	type  goto 35


state 25
	funcdecl : tPUBLIC tPROCEDURE tIDENTIFIER . '(' fargs ')'  (19)
	funcdef : tPUBLIC tPROCEDURE tIDENTIFIER . '(' fargs ')' block  (26)

	'('  shift 36
	.  error


state 26
	vardecl : tPUBLIC type tIDENTIFIER .  (10)
	vardecl : tPUBLIC type tIDENTIFIER . '=' expr  (13)
	funcdecl : tPUBLIC type tIDENTIFIER . '(' fargs ')'  (16)
	funcdef : tPUBLIC type tIDENTIFIER . '(' fargs ')' block  (22)
	funcdef : tPUBLIC type tIDENTIFIER . '(' fargs ')' '=' literal block  (24)

	'='  shift 37
	'('  shift 38
	';'  reduce 10


state 27
	funcdecl : tUSED tPROCEDURE tIDENTIFIER . '(' fargs ')'  (20)

	'('  shift 39
	.  error


state 28
	vardecl : tUSED type tIDENTIFIER .  (11)
	vardecl : tUSED type tIDENTIFIER . '=' expr  (14)
	funcdecl : tUSED type tIDENTIFIER . '(' fargs ')'  (17)

	'='  shift 40
	'('  shift 41
	';'  reduce 11


state 29
	type : '[' type ']' .  (42)

	.  reduce 42


state 30
	vardecl : type tIDENTIFIER '=' . expr  (15)

	tINTEGER  shift 42
	tDOUBLE  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 52
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 31
	funcdecl : type tIDENTIFIER '(' . fargs ')'  (18)
	funcdef : type tIDENTIFIER '(' . fargs ')' block  (23)
	funcdef : type tIDENTIFIER '(' . fargs ')' '=' literal block  (25)
	fargs : .  (35)

	tINT  shift 1
	tREAL  shift 2
	tSTR  shift 6
	'['  shift 7
	')'  reduce 35

	arg  goto 32
	fargs  goto 57
	args  goto 34
	type  goto 35


state 32
	args : arg .  (36)

	.  reduce 36


state 33
	funcdecl : tPROCEDURE tIDENTIFIER '(' fargs . ')'  (21)
	funcdef : tPROCEDURE tIDENTIFIER '(' fargs . ')' block  (27)

	')'  shift 58
	.  error


state 34
	fargs : args .  (34)
	args : args . ',' arg  (37)

	','  shift 59
	')'  reduce 34


state 35
	arg : type . tIDENTIFIER  (38)

	tIDENTIFIER  shift 60
	.  error


state 36
	funcdecl : tPUBLIC tPROCEDURE tIDENTIFIER '(' . fargs ')'  (19)
	funcdef : tPUBLIC tPROCEDURE tIDENTIFIER '(' . fargs ')' block  (26)
	fargs : .  (35)

	tINT  shift 1
	tREAL  shift 2
	tSTR  shift 6
	'['  shift 7
	')'  reduce 35

	arg  goto 32
	fargs  goto 61
	args  goto 34
	type  goto 35


state 37
	vardecl : tPUBLIC type tIDENTIFIER '=' . expr  (13)

	tINTEGER  shift 42
	tDOUBLE  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 62
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 38
	funcdecl : tPUBLIC type tIDENTIFIER '(' . fargs ')'  (16)
	funcdef : tPUBLIC type tIDENTIFIER '(' . fargs ')' block  (22)
	funcdef : tPUBLIC type tIDENTIFIER '(' . fargs ')' '=' literal block  (24)
	fargs : .  (35)

	tINT  shift 1
	tREAL  shift 2
	tSTR  shift 6
	'['  shift 7
	')'  reduce 35

	arg  goto 32
	fargs  goto 63
	args  goto 34
	type  goto 35


state 39
	funcdecl : tUSED tPROCEDURE tIDENTIFIER '(' . fargs ')'  (20)
	fargs : .  (35)

	tINT  shift 1
	tREAL  shift 2
	tSTR  shift 6
	'['  shift 7
	')'  reduce 35

	arg  goto 32
	fargs  goto 64
	args  goto 34
	type  goto 35


state 40
	vardecl : tUSED type tIDENTIFIER '=' . expr  (14)

	tINTEGER  shift 42
	tDOUBLE  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 65
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 41
	funcdecl : tUSED type tIDENTIFIER '(' . fargs ')'  (17)
	fargs : .  (35)

	tINT  shift 1
	tREAL  shift 2
	tSTR  shift 6
	'['  shift 7
	')'  reduce 35

	arg  goto 32
	fargs  goto 66
	args  goto 34
	type  goto 35


state 42
	literal : tINTEGER .  (28)

	.  reduce 28


state 43
	literal : tDOUBLE .  (29)

	.  reduce 29


state 44
	lval : tIDENTIFIER .  (93)
	funcall : tIDENTIFIER . '(' exprs ')'  (95)
	funcall : tIDENTIFIER . '(' ')'  (96)

	'('  shift 67
	tPRINT  reduce 93
	tPRINTLN  reduce 93
	'='  reduce 93
	'|'  reduce 93
	'&'  reduce 93
	tEQ  reduce 93
	tNE  reduce 93
	'<'  reduce 93
	'>'  reduce 93
	tLE  reduce 93
	tGE  reduce 93
	'+'  reduce 93
	'-'  reduce 93
	'*'  reduce 93
	'/'  reduce 93
	'%'  reduce 93
	'['  reduce 93
	';'  reduce 93
	')'  reduce 93
	','  reduce 93
	']'  reduce 93
	':'  reduce 93
	'?'  reduce 93


state 45
	string : tSTRING .  (32)

	.  reduce 32


state 46
	literal : tNULL .  (31)

	.  reduce 31


state 47
	expr : '+' . expr  (71)

	tINTEGER  shift 42
	tDOUBLE  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 68
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 48
	expr : '-' . expr  (70)

	tINTEGER  shift 42
	tDOUBLE  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 69
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 49
	expr : '[' . expr ']'  (90)

	tINTEGER  shift 42
	tDOUBLE  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 70
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 50
	expr : '(' . expr ')'  (83)

	tINTEGER  shift 42
	tDOUBLE  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 71
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 51
	expr : '@' .  (88)

	.  reduce 88


state 52
	vardecl : type tIDENTIFIER '=' expr .  (15)
	expr : expr . '+' expr  (72)
	expr : expr . '-' expr  (73)
	expr : expr . '*' expr  (74)
	expr : expr . '/' expr  (75)
	expr : expr . '%' expr  (76)
	expr : expr . '<' expr  (77)
	expr : expr . '>' expr  (78)
	expr : expr . tGE expr  (79)
	expr : expr . tLE expr  (80)
	expr : expr . tNE expr  (81)
	expr : expr . tEQ expr  (82)
	expr : expr . '&' expr  (86)
	expr : expr . '|' expr  (87)
	lval : expr . '[' expr ']'  (94)

	'|'  shift 72
	'&'  shift 73
	tEQ  shift 74
	tNE  shift 75
	'<'  shift 76
	'>'  shift 77
	tLE  shift 78
	tGE  shift 79
	'+'  shift 80
	'-'  shift 81
	'*'  shift 82
	'/'  shift 83
	'%'  shift 84
	'['  shift 85
	';'  reduce 15


state 53
	expr : literal .  (92)

	.  reduce 92


state 54
	expr : funcall .  (89)

	.  reduce 89


state 55
	expr : lval .  (84)
	expr : lval . '=' expr  (85)
	expr : lval . '?'  (91)

	'='  shift 86
	'?'  shift 87
	tPRINT  reduce 84
	tPRINTLN  reduce 84
	'|'  reduce 84
	'&'  reduce 84
	tEQ  reduce 84
	tNE  reduce 84
	'<'  reduce 84
	'>'  reduce 84
	tLE  reduce 84
	tGE  reduce 84
	'+'  reduce 84
	'-'  reduce 84
	'*'  reduce 84
	'/'  reduce 84
	'%'  reduce 84
	'['  reduce 84
	';'  reduce 84
	')'  reduce 84
	','  reduce 84
	']'  reduce 84
	':'  reduce 84


state 56
	literal : string .  (30)
	string : string . tSTRING  (33)

	tSTRING  shift 88
	tPRINT  reduce 30
	tPRINTLN  reduce 30
	'|'  reduce 30
	'&'  reduce 30
	tEQ  reduce 30
	tNE  reduce 30
	'<'  reduce 30
	'>'  reduce 30
	tLE  reduce 30
	tGE  reduce 30
	'+'  reduce 30
	'-'  reduce 30
	'*'  reduce 30
	'/'  reduce 30
	'%'  reduce 30
	'['  reduce 30
	';'  reduce 30
	')'  reduce 30
	','  reduce 30
	']'  reduce 30
	'{'  reduce 30
	':'  reduce 30


state 57
	funcdecl : type tIDENTIFIER '(' fargs . ')'  (18)
	funcdef : type tIDENTIFIER '(' fargs . ')' block  (23)
	funcdef : type tIDENTIFIER '(' fargs . ')' '=' literal block  (25)

	')'  shift 89
	.  error


state 58
	funcdecl : tPROCEDURE tIDENTIFIER '(' fargs ')' .  (21)
	funcdef : tPROCEDURE tIDENTIFIER '(' fargs ')' . block  (27)

	'{'  shift 90
	$end  reduce 21
	tINT  reduce 21
	tREAL  reduce 21
	tPROCEDURE  reduce 21
	tPUBLIC  reduce 21
	tUSED  reduce 21
	tSTR  reduce 21
	'['  reduce 21

	block  goto 91


state 59
	args : args ',' . arg  (37)

	tINT  shift 1
	tREAL  shift 2
	tSTR  shift 6
	'['  shift 7
	.  error

	arg  goto 92
	type  goto 35


state 60
	arg : type tIDENTIFIER .  (38)

	.  reduce 38

